--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">RSSWidget</string>
+    <string name="settings_activity_title">Настройки</string>
 
     <string name="news_widget_caption">Сводка новостей</string>
     <string name="previous_news">Назад</string>
@@ -10,8 +11,12 @@
     <string name="hide_news">скрыть</string>
 
     <string name="sample_pub_date">12 августа 2018</string>
-    <string name="sample_title">Таксист высадил пассажирок посреди дороги за громкий разговор</string>
-    <string name="sample_description">В Таиланде таксист высадил пассажирок на половине пути, потому что устал от пробок и их громкого разговора. Когда одна из девушек спросила его, почему он так поступил, он ответил, что ему лень везти их дальше. Деньги мужчина возвращать отказался. В итоге таксиста оштрафовали на три тысячи батов (6,2 тысячи рублей).</string>
+    <string name="sample_title">\tТаксист высадил пассажирок посреди дороги за громкий разговор</string>
+    <string name="sample_description">\tВ Таиланде таксист высадил пассажирок на половине пути, потому что устал от пробок и их громкого разговора. Когда одна из девушек спросила его, почему он так поступил, он ответил, что ему лень везти их дальше. Деньги мужчина возвращать отказался. В итоге таксиста оштрафовали на три тысячи батов (6,2 тысячи рублей).</string>
     <string name="hint_rss_resource">Адрес ресурса</string>
-    <string name="button_continue">продолжить</string>
+    <string name="button_continue">Применить</string>
+    <string name="news_list_empty">Список новостей пуст</string>
+    <string name="list_hide_news">Список скрытых новостей:</string>
+    <string name="string_with_tab">\t%s</string>
+    <string name="clear_black_list"><u>Очистить все</u></string>
 </resources>
